--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,24 +5,139 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <title>Events</title>
+    <style>
+        /* Add any other styles needed for your buttons */
+    </style>
 </head>
 <body>
+    <script>
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length === 2) return decodeURIComponent(parts.pop().split(';').shift());
+        }
+
+        document.addEventListener('DOMContentLoaded', async function()  {
+            try {
+                const email = getCookie('user_email'); // Replace 'user_email' with the actual cookie name
+                const loginSignupButton = document.getElementById('login-signup-button');
+                const logoutButton = document.getElementById('logout-button');
+                if (email) {
+                    document.getElementById('notifications-button').style.display = 'block';
+                    loginSignupButton.style.display = 'none';
+                    logoutButton.style.display = 'block';
+                    await getNotifications();
+                } else {
+                    document.getElementById('notifications-button').style.display = 'none';
+                    loginSignupButton.style.display = 'block';
+                    logoutButton.style.display = 'none';
+                }
+            } catch (error) {
+                console.error('Error checking authentication status:', error);
+                document.getElementById('notifications-button').style.display = 'none';
+                document.getElementById('login-signup-button').style.display = 'block';
+                document.getElementById('logout-button').style.display = 'none';
+            }
+        });
+
+        async function getNotifications() {
+            try {
+                console.log("in th method");
+                let response = await fetch('/notifications', {
+                    method: 'GET',
+                    credentials: 'include' // Include cookies in the request
+                });
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+                console.log("getting data ready");
+                const data = await response.json();
+                console.log("data ready");
+                displayNotifications(data); 
+                // Pass the fetched notifications to display function
+                console.log("joever");
+            } catch (error) {
+                console.error('Error fetching notifications:', error);
+            }
+        }
+
+        function displayNotifications(notifications) {
+            const notificationsList = document.getElementById('notifications-list');
+            notificationsList.innerHTML = ''; // Clear existing notifications
+
+            if (notifications.length === 0) {
+                notificationsList.innerHTML = '<li>No new notifications.</li>';
+                return;
+            }
+
+            notifications.forEach(notification => {
+                const notificationElement = document.createElement('li');
+                notificationElement.className = 'notification-item';
+
+                // Create a container for the notification content
+                const notificationContent = document.createElement('div');
+                notificationContent.innerHTML = `
+                    <h4>Event ID: ${notification.event_id}</h4>
+                    <p>${notification.body}</p>
+                `;
+
+                notificationElement.appendChild(notificationContent);
+                notificationsList.appendChild(notificationElement);
+            });
+        }
+
+    </script>
+
     <h1>Event Registration</h1>
     <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="event.html">Events</a></li>
         <li><a href="message.html">Messages</a></li>
-        <li><a href="notification.html">Notifications</a></li>
-        <li><a href="login.html">Log In/Sign Up</a></li>
+        <li><a id="login-signup-button" href="login.html">Log In/Sign Up</a></li>
+        <li><a id="logout-button">Log Out</a></li>
     </ul>
 
     <h2>This is the home page</h2>
+
+    <!-- Notifications Button -->
+    <button id="notifications-button">Notifications</button>
+
+    <!-- Notifications Sidebar -->
+    <div id="notifications-sidebar">
+        <h3>Notifications</h3>
+        <ul id="notifications-list">
+            <!-- Notifications will be dynamically added here -->
+        </ul>
+    </div>
 
     <!-- Container to hold the public events -->
     <div id="events-container"></div>
 
     <script src="comment.js" defer></script>
     <script>
+        // Function to toggle the notifications sidebar
+        document.getElementById('notifications-button').addEventListener('click', function() {
+            const sidebar = document.getElementById('notifications-sidebar');
+            sidebar.classList.toggle('active');
+            console.log('Sidebar toggled:', sidebar.classList.contains('active'));
+        });
+
+        // Function to log out the user
+        document.getElementById('logout-button').addEventListener('click', async function() {
+            try {
+                const response = await fetch('/logout', { method: 'POST' });
+                if (response.ok) {
+                    // Redirect to the login page or refresh the page
+                    window.location.href = 'home.html'; // Or window.location.reload();
+                } else {
+                    console.error('Failed to log out');
+                }
+            } catch (error) {
+                console.error('Error logging out:', error);
+            }
+        });
+
         // Function to fetch public events and display them
         async function fetchPublicEvents() {
             try {
@@ -73,7 +188,7 @@
                 const form = document.getElementById(`comment-form-${event.id}`);
                 const eventId = form.getAttribute('data-event-id');
 
-                if(form){
+                if (form) {
                     form.addEventListener('submit', async(event) => {
                         const input = form.querySelector('input[name="comment"]');
                         const commentText = input.value;
@@ -82,13 +197,12 @@
                         input.value = '';
                     });
                     fetchComments(eventId);
-                }
-
-                else{
+                } else {
                     console.error(`Form with ID comment-form-${event.id} not found`);
                 }
             });
         }
+
         // Fetch and display public events when the page loads
         window.onload = fetchPublicEvents;
     </script>
